--- a/app/src/main/res/layout/camera_home.xml
+++ b/app/src/main/res/layout/camera_home.xml
@@ -1,84 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:id="@+id/layout"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    android:id="@+id/layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
+    <!-- 预览画布 -->
     <SurfaceView
         android:id="@+id/surfaceView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
+
+    <!-- 闪光灯、前置摄像头、后置摄像头、聚焦 -->
 
     <RelativeLayout
-        android:id="@+id/buttonLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
         <org.gaochun.camera.CameraGrid
             android:id="@+id/camera_grid"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"/>
+            android:layout_alignParentTop="true" />
 
         <View
             android:id="@+id/focus_index"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/cam_focus"
-            android:visibility="invisible"/>
+            android:background="@drawable/camera_focus"
+            android:visibility="invisible" />
 
         <ImageView
+            android:id="@+id/flash_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/action_button"
-            android:src="@drawable/camera_shutter"
-            android:layout_above="@+id/bottom_relative"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="20dp"/>
+            android:layout_alignParentLeft="true"
+            android:onClick="onClick"
+            android:padding="15dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/camera_flash_off" />
+
+        <ImageView
+            android:id="@+id/camera_flip_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:onClick="onClick"
+            android:padding="15dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/camera_flip" />
+
+        <!-- 底部按钮 -->
 
         <RelativeLayout
-            android:id="@+id/bottom_relative"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_alignParentBottom="true">
+            android:layout_width="fill_parent"
+            android:layout_height="70dp"
+            android:layout_alignParentBottom="true"
+            android:background="#a0000000"
+            android:padding="5dp" >
+
+            <Button
+                android:id="@+id/search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:background="@null"
+                android:drawablePadding="3dp"
+                android:drawableTop="@drawable/ic_search_selector"
+                android:onClick="onClick"
+                android:text="搜图"
+                android:textColor="@drawable/row_selector_text" />
 
             <ImageView
-                android:id="@+id/camera_flip_view"
+                android:id="@+id/action_button"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:layout_height="wrap_content"
-                android:src="@drawable/camera_flip"/>
+                android:clickable="true"
+                android:onClick="onClick"
+                android:src="@drawable/btn_shutter_photo" />
 
-            <ImageView
-                android:id="@+id/camera_back"
-                android:layout_toLeftOf="@+id/camera_flip_view"
+            <Button
+                android:id="@+id/takephoto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/camera_back"
-                android:layout_marginRight="20dp"
-                />
-
-
-            <ImageView
-                android:id="@+id/flash_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/camera_flash_off"
-                android:layout_toRightOf="@+id/camera_flip_view"
-                android:layout_marginLeft="20dp"/>
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="30dp"
+                android:background="@null"
+                android:drawablePadding="3dp"
+                android:drawableTop="@drawable/ic_takephoto_selector"
+                android:onClick="onClick"
+                android:text="拍照"
+                android:textColor="@drawable/row_selector_text" />
         </RelativeLayout>
-
-
     </RelativeLayout>
-    <!-- Button
-        android:id="@+id/btnCapture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/round_button"
-        android:text="@string/btn_capture" /-->
 
 </FrameLayout>
