--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -3,28 +3,32 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@drawable/simple_toast_bg">
+    android:background="@drawable/simple_toast_bg" >
 
-    <LinearLayout android:id="@+id/body"
-        android:orientation="horizontal"
+    <LinearLayout
+        android:id="@+id/body"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:baselineAligned="false"
-        android:paddingTop="3dp"
+        android:orientation="horizontal"
         android:paddingBottom="3dp"
         android:paddingLeft="8dip"
-        android:paddingRight="8dip">
+        android:paddingRight="8dip"
+        android:paddingTop="3dp" >
 
-        <ProgressBar android:id="@android:id/progress"
+        <ProgressBar
+            android:id="@android:id/progress"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:max="10000" />
 
-        <TextView android:id="@+id/message"
+        <TextView
+            android:id="@+id/message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#ffffff"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="12dip"
-            android:layout_gravity="center_vertical" />
+            android:textColor="#ffffff" />
     </LinearLayout>
+
 </FrameLayout>
